# rust-pastebin

./: .env  .gitignore  Cargo.toml
src/: catcher.rs  constants.rs  main.rs  tests.rs
src/managers/: manager_message_id.rs  manager_rocksdb.rs  mod.rs
src/middlewares/: middleware_counter.rs  middleware_logger.rs  mod.rs
src/models/: message.rs  mod.rs  paste_id.rs
src/routers/: mod.rs  router_about.rs  router_index.rs
src/tests/: mod.rs  tests_middleware_counter.rs  tests_router_about.rs  tests_router_index.rs
