[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.3"
log = "0.4.17"
env_logger = "0.9.0"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocksdb = "0.19.0"
